--- a/readme.org
+++ b/readme.org
@@ -12,3 +12,42 @@ Ideas:
 - Print the result using ASCII 8bit 
 - Make the array dynamic in size
 - Validate the numbers, between 0-255
+  
+Example output from tests:
+
+#+BEGIN_SRC text
+Running test: ++ 
+Expected: 
+Cells: #(2) to return #(2) 
+Pointer: 0 to return 0 
+
+Running test: ++- 
+Expected: 
+Cells: #(1) to return #(1) 
+Pointer: 0 to return 0 
+
+Running test: ++-> 
+Expected: 
+Cells: #(1 0) to return #(1 0) 
+Pointer: 1 to return 1 
+
+Running test: ++->< 
+Expected: 
+Cells: #(1 0) to return #(1 0) 
+Pointer: 0 to return 0 
+
+Running test: ++>+++++ 
+Expected: 
+Cells: #(2 5) to return #(2 5) 
+Pointer: 1 to return 1 
+
+Running test: ++[-] 
+Expected: 
+Cells: #(0) to return #(0) 
+Pointer: 0 to return 0 
+
+Running test: ++>+++++[<+>-] 
+Expected: 
+Cells: #(7 0) to return #(7 0) 
+Pointer: 1 to return 1 
+#+END_SRC
