--- a/readme.org
+++ b/readme.org
@@ -6,16 +6,14 @@ So far the code is shiet, but fun to try.
 
 I'm sort of liking the idea of having a "IR" with a flat list of symbols, than just doing two loops over the the "IR" and mapping to the correct command.
 
-Ideas:
-
-- [ ] Clean up code
-- [ ] Ignore whitespace
-- [x] Print the result using ASCII 8bit 
-- [x] Make the array dynamic in size
-- [ ] Validate the numbers, between 0-255
+** todo
+ - [ ] Clean up code
+ - [ ] Ignore whitespace
+ - [X] Print the result using ASCII 8bit 
+ - [X] Make the array dynamic in size
+ - [ ] Validate the numbers, between 0-255
   
-Example output from tests:
-
+** Example output from tests:
 #+BEGIN_SRC text
 Running test: ++ 
 Expected: 
